[package]
name = "opengl-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["egl", "glx", "x11", "wayland", "wgl"]
egl = ["glutin-winit/egl", "png"]
glx = ["glutin-winit/glx"]
wgl = ["glutin-winit/wgl"]
x11 = ["glutin-winit/x11"]
wayland = ["glutin-winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita"]

[dependencies]
glutin = "0.30.7"
gl = "0.14.0"
glutin-winit = "0.3.0"
winit = "0.28.3"
raw-window-handle = "0.5.2"
png = { version = "0.17.8", optional = true }

[build-dependencies]
gl_generator = "0.14"
cfg_aliases = "0.1.1"